Fixed z-index for table header to prevent status and priority divs overflows.

--- a/src/components/IncidentTable/IncidentTableComponent.scss
+++ b/src/components/IncidentTable/IncidentTableComponent.scss
@@ -107,6 +107,7 @@
 .thead {
   position: sticky;
   top: 0; /* Don't forget this, required for the stickiness */
+  z-index: 1000 !important;
 }
 
 .th {
